--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
 
-			var html = "<br>Dear "+ document.querySelector("#YourName").value.toUpperCase() + ", the &#128151 LOVE &#128151 between you and "+document.querySelector("#CrushName").value + " is " + love + "%<br><br>"
+			var html = "<br>Dear "+ document.querySelector("#YourName").value.toUpperCase() + ", the &#128151 LOVE &#128151 between you and "+document.querySelector("#CrushName").value.toUpperCase() + " is " + love + "%<br><br>"
 			if(love==100)
 			{
 				
